# artifact229

./: Dockerfile  README.md
formalization/: _CoqProject  default.nix
formalization/src/: both_step.v  dune  examples.v  examples_utils.v  linear.v  linearization.v  linearization_facts.v  notations.v  results.v  security.v  security_facts.v  semantics.v  semantics_facts.v  syntax.v  syntax_facts.v  typesystem.v  typesystem_facts.v  utils.v  utils_facts.v  var.v
jasmin/compiler/src/: compile.ml
jasmin/proofs/: .lia.cache  .nia.cache  Makefile.coq.conf  _CoqProject
jasmin/proofs/arch/: .arch_decl.aux  .arch_extra.aux  .arch_sem.aux  .arch_utils.aux  .asm_gen.aux  .asm_gen_proof.aux  .label.aux  .sem_params_of_arch_extra.aux
jasmin/proofs/compiler/: .allocation.aux  .allocation_proof.aux  .arch_params.aux  .arm.aux  .arm_decl.aux  .arm_decl_core.aux  .arm_extra.aux  .arm_facts.aux  .arm_instr_decl.aux  .arm_instr_decl_lemmas.aux  .arm_lowering.aux  (+65 more)
plain/src/: .gitignore  Makefile.functions
plain/test/: .gitignore
scripts/: README.md  bench-prepare  bench-run  clean  compare  compare-type0  compare-type1  compare-type2
sslh/bench/: Makefile
sslh/src/: Makefile.common
sslh/test/: Makefile
sslh_rsb/src/: Makefile  Makefile.common
tables/: Makefile  main.tex  tables_codesize.tex  tables_paper.tex  tables_ssbd_rsb.tex
tables/scripts/: preprocess_tables  step1_extract_data_from_raw  step2_preprocess_tables_paper  step3_preprocess_tables_ssbd_rsb  step4_tables_codesize
tables/templates/: tables_codesize.tex  tables_paper.tex  tables_ssbd_rsb.tex
(+745 files in other folders)
